--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,4 +1,32 @@
+.Getting Started
 * xref:adoc/trento-guide.adoc[Getting Started with Trento]
-* xref:upstream_projects/ci-cd-variables[Web]
-* xref:upstream_projects/ci-cd-variables[Wanda]
-* xref:upstream_projects/ci-cd-variables[Agent]
+
+.Development & Technical Details
+** Web Component
+*** Alerting
+**** xref:web/alerting/alerting.adoc[Alerting]
+*** Authentication
+**** xref:web/authentication/jwt_specification.adoc[JWT Specification]
+**** xref:web/authentication/spa_flow.adoc[SPA Authentication Flow]
+*** Development
+**** xref:web/development/environment_variables.adoc[Environment Variables]
+**** xref:web/development/hack_on_the_trento.adoc[Development Setup]
+*** Integration
+**** xref:web/integration/oidc.adoc[OIDC Integration]
+*** Monitoring
+**** xref:web/monitoring/monitoring.adoc[Monitoring]
+
+
+** Wanda (Health Check Engine)
+*** xref:wanda/specification.adoc[Wanda Specification]
+*** xref:wanda/expression_language.adoc[Expression Language]
+*** xref:wanda/gatherers.adoc[Data Gatherers]
+*** xref:wanda/rhai_expressions_cheat_sheet.adoc[Rhai Expressions Cheat Sheet]
+*** Development
+**** xref:wanda/development/hack_on_wanda.adoc[Wanda Development]
+**** xref:wanda/development/demo.adoc[Wanda Demo]
+
+
+.API Documentation
+* https://www.trento-project.io/wanda/swaggerui/[Wanda API^]
+* https://www.trento-project.io/web/swaggerui/[Web API^]
